# Qt-Taglib

./: .gitignore  CMakeLists.txt  README.md  collect.cpp  collect.h  collect.ui  lyric.cpp  lyric.h  lyric.ui  main.cpp  music.cpp  music.h  music.ui  player.cpp  player.h  player.ui  resource.qrc  search.cpp  search.h  search.ui
Release/: CMakeCache.txt  Music.cbp  cmake_install.cmake  resource.qrc.depends
Release/Music_autogen/: moc_predefs.h  mocs_compilation.cpp
Style/: botn_style.qss  listWidget_Style.qss  tabWidget_style.qss
